--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <body>
         <title>Primo test Push</title>
         
-        <h1>Titolone</h1>
-        <p>Paragrafone pieno proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno</p>
-
+        <div>
+            <h1>Titolone</h1>
+            <p>Paragrafone pieno proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno</p>
+        </div>
     </body>
 </html>
