aggiunto <head> base con il link allo style.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <title>Primo test Push</title>
+        <head>
+            <meta charset="UTF-8" />
+            <link rel="stylesheet" type="text/css" href="style.css" /> 
+            <title>Primo test push</title>
+        </head>
         
         <div>
             <h1>Titolone</h1>
