modifico testi con "Hello World" e centro titolo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <head>
             <meta charset="UTF-8" />
             <link rel="stylesheet" type="text/css" href="style.css" /> 
-            <title>Primo test push</title>
+            <title>HELLO WORLD</title>
         </head>
         
         <div>
-            <h1>Titolone</h1>
-            <p>Paragrafone pieno proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno ma proprio pieno</p>
+            <h1>HELLO WORLD</h1>
         </div>
     </body>
 </html>
